# ars_project

./: .gitignore  .gitmodules  LICENSE  README.md  setup.bash  setup.sh  setup.zsh
ars_robot/docs/real_experim_guides/: optitrackGuide.md
ars_robot_sim/ars_robot_sim/: CMakeLists.txt  package.xml
ars_robot_sim_inlab/config/config/optitrack_transf/: optitrack_transf_environment.yaml
ars_robot_sim_inlab/config/config_ext/motive_files/: all_in_one.ttp
ars_robot_sim_inlab/config/config_ext/motive_files/Bodies/: static_bodies.tra  tello.tra
ars_robot_sim_inlab/config/config_ext/motive_files/Calibration/: Calibration Exceptional (MeanErr 0.961 mm) 2022-08-29 5.50pm.cal
ars_robot_sim_inlab/config/config_ext/motive_files/World/: World.ttp
ars_robot_sim_inlab/config/config_ext/motive_files/_old/01/: Calibration Excellent (MeanErr 1.405 mm) 2022-07-20 11.04am.cal  allinOne_2022_07_25.ttp
ars_robot_sim_inlab/launchers/docs/: launchers_info.txt
ars_robot_sim_inlab/launchers/launch/: dji_tello_driver_ros.launch  optitrack_node.launch  optitrack_transf_environment_dynamic.launch  optitrack_transf_environment_static.launch  optitrack_transf_robot.launch
docs/: info.txt
docs/real_experim_guides/: guide_jl.md  setupGuide.md
robot_intelligence_student/: README.md
robot_intelligence_student/config/: .gitignore
rosbags/: .gitignore
scripts/: publish_path_01.sh  publish_path_02.sh  publish_path_03.sh  publish_path_04.sh  publish_path_05.sh  publish_path_06.sh  publish_path_07.sh  publish_path_empty.sh
(+7 files in other folders)
